--- a/project/style.css
+++ b/project/style.css
@@ -8,7 +8,14 @@ body {
 
 /*PC*/
 .top{
-  margin-top: 18%;
+  margin-top: 12%;
+  padding-top: 2%; 
+  padding-bottom: 2%; 
+  color: white
+}
+
+.top_shop{
+  margin-top: 12%;
   padding-top: 2%; 
   padding-bottom: 2%; 
   color: white
@@ -39,13 +46,22 @@ body {
     padding-right: 4%
   }
   .shop{
-    padding-right: 4%;
-    padding-left: 4%
+    width: 535px
   }
   .bd_photo{
     margin-left: 4%;
     width: 200%;
     margin-top: 5%
+  }
+  .product_table{
+    margin-right: 5%
+  }
+  .top_shop{
+    margin-top: 13%;
+    width: 535px
+  }
+  .shop_photo{
+    width: 60%
   }
 }
 
@@ -66,14 +82,13 @@ body {
     margin-left: 0%;
     text-align: center;
   }
+  .top_shop{
+    margin-top: 9%;
+    width: 768px
+  }
   .shop{
-    padding-right: 10%;
-    padding-left: 4%
+    width: 768px
   }
-  .shop_input{
-    size: 10
-  }
-  
 }
 
 .toggle_box{
@@ -127,19 +142,17 @@ body {
   padding: 0px
 }
 
-.shop{
-  padding-right: 4%;
-  padding-left: 4%
-}
-
 .bd_request{
   margin-top: 3%;
-  padding-left: 5%;
   padding-right: 3%
 }
 
 .bd_photo{
   width: 90%
+}
+
+.shop_photo{
+  width: 100%
 }
 
 /***/
